force-app/main/default/objects/PaymentDetail__c/PaymentDetail__c.object-meta.xml
<CustomObject>
    <label>支払明細</label>
    <nameField>
        <displayFormat>PD-{000000000}</displayFormat>
        <label>支払明細ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>