force-app/main/default/objects/PaymentDetail__c/fields/DetailName__c.field-meta.xml
<CustomField>
    <fullName>DetailName__c</fullName>
    <label>明細名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>