force-app/main/default/objects/PaymentDetail__c/fields/ExpenseItem__c.field-meta.xml
<CustomField>
    <fullName>ExpenseItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>費目名</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>支払明細</relationshipLabel>
    <relationshipName>PaymentDetailExpenseItemRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>