force-app/main/default/objects/PaymentDetail__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>支払</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>支払明細</relationshipLabel>
    <relationshipName>PaymentDetailPaymentRelation1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>