force-app/main/default/objects/PaymentDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Payment__c</columns>
    <columns>DetailName__c</columns>
    <columns>ExpenseItem__c</columns>
    <columns>IsPaymentTarget__c</columns>
    <columns>CostCategory__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>